Update remaining text length, Post Tweet Functionality

--- a/app/src/main/res/layout/activity_tweet_compose.xml
+++ b/app/src/main/res/layout/activity_tweet_compose.xml
@@ -8,16 +8,18 @@
     android:lines="8"
     android:minLines="6"
     android:gravity="top|left"
-    android:maxLength="0"
+    android:maxLength="140"
     android:layout_height="fill_parent"
     android:layout_width="fill_parent"
     android:scrollbars="vertical"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:id="@+id/etTweetBody" />
+    android:editable="true"
+    android:hint="@string/compose_hint"
+    android:layout_alignParentTop="true"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentBottom="true"
+    android:layout_alignParentRight="true"
+    android:layout_alignParentEnd="true"
+    android:id="@+id/etTweetBody" />
 
 </RelativeLayout>
