--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -43,6 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/body"
+            android:autoLink="all"
             android:id="@+id/tvBody"
             android:paddingTop="5dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
