--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -8,6 +8,7 @@
         android:padding="10dp"
         android:id="@+id/item_info">
 
+
         <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
@@ -17,6 +18,24 @@
             android:layout_alignParentStart="true"
             android:background="#ff83ff2e"
             android:layout_marginRight="5dp" />
+
+<!--
+        <com.makeramen.roundedimageview.RoundedImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/ivProfileImage"
+            android:scaleType="fitCenter"
+            app:riv_corner_radius="20dip"
+            app:riv_border_width="2dip"
+            app:riv_mutate_background="true"
+            app:riv_tile_mode="repeat"
+            app:riv_oval="false"
+            android:src="@drawable/ic_launcher"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+-->
 
         <TextView
             android:textAppearance="?android:attr/textAppearanceLarge"
@@ -67,7 +86,26 @@
     android:layout_width="match_parent" android:layout_height="wrap_content"
     android:layout_below="@+id/item_info"
     android:id="@+id/decorators">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Fav Count"
+            android:id="@+id/tvFavCount"
+            android:layout_centerInParent="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
 
+        <ImageView
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:id="@+id/imageView"
+            android:src="@drawable/ic_fav"
+            android:paddingRight="5dp"
+            android:layout_centerInParent="true"
+            android:layout_toLeftOf="@id/tvFavCount" />
     </RelativeLayout>
+
+
 
 </RelativeLayout>
