--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -112,7 +112,25 @@
             android:src="@drawable/ic_reply"
             android:paddingLeft="5dp"
             android:layout_centerInParent="true"
+            android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="RetweetCount"
+            android:id="@+id/tvRetweetCount"
+            android:layout_centerInParent="true"/>
+        <ImageView
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_centerInParent="true"
+            android:paddingRight="5dp"
+            android:id="@+id/ivRetweet"
+            android:src="@drawable/ic_retweet"
+            android:layout_toLeftOf="@id/tvRetweetCount"/>
+
 
     </RelativeLayout>
 
