--- a/app/src/main/res/menu/menu_timeline.xml
+++ b/app/src/main/res/menu/menu_timeline.xml
@@ -2,13 +2,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.codepath.apps.mysimpletweets.activities.TimelineActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item
+        android:id="@+id/action_settings"
+        android:orderInCategory="100"
+        android:title="@string/action_settings"
+        app:showAsAction="never" />
     <item
         android:id="@+id/action_compose"
         android:icon="@drawable/ic_twitter_compose"
-        app:showAsAction="ifRoom"
+        android:orderInCategory="50"
         android:title="Compose"
-        android:orderInCategory="50"/>
+        app:showAsAction="ifRoom" />
 
+    <item
+        android:id="@+id/action_profile"
+        android:icon="@drawable/ic_profile"
+        android:orderInCategory="60"
+        android:title="Profile"
+        app:showAsAction="ifRoom" />
 </menu>
