--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -6,7 +6,8 @@
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent" android:layout_height="wrap_content"
         android:padding="10dp"
-        android:id="@+id/item_info">
+        android:id="@+id/item_info"
+        android:descendantFocusability="blocksDescendants">
 
 
         <ImageView
@@ -64,6 +65,7 @@
             android:text="@string/body"
             android:id="@+id/tvBody"
             android:paddingTop="5dp"
+            android:autoLink="all"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_below="@+id/tvScreenName"
             android:layout_toRightOf="@+id/ivProfileImage"/>
