Added Media. Do not allow undo-retweet. Autolink in TweetDetail

--- a/app/src/main/res/layout/activity_tweet_detail.xml
+++ b/app/src/main/res/layout/activity_tweet_detail.xml
@@ -6,6 +6,7 @@
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent" android:layout_height="wrap_content"
         android:padding="10dp"
+        android:descendantFocusability="blocksDescendants"
         android:id="@+id/tweet_detail">
 
 
@@ -46,6 +47,7 @@
             android:text="@string/body"
             android:id="@+id/tvTweetDetailBody"
             android:paddingTop="5dp"
+            android:autoLink="all"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_below="@+id/tvTweetDetailScreenName"
             android:layout_toRightOf="@+id/ivTweetDetailProfileImage"/>
