--- a/app/src/main/res/layout/activity_tweet_detail.xml
+++ b/app/src/main/res/layout/activity_tweet_detail.xml
@@ -75,17 +75,30 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingLeft="5dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:orientation="vertical"
             android:gravity="center">
-            <TextView
+            <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="@string/tvRetweets"
-                android:id="@+id/tvRetweet"
-                />
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:text="@string/tvRetweets"
+                    android:id="@+id/tvRetweet"
+                    />
+                <ImageView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:id="@+id/ivTweetDetailRetweet"
+                    android:src="@drawable/ic_retweet"
+                    android:paddingLeft="5dp"
+                    android:layout_centerInParent="true"
+                    android:layout_toRightOf="@id/tvRetweet"  />
+            </RelativeLayout>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -100,13 +113,24 @@
             android:orientation="vertical"
             android:id="@+id/FavoritesLayout"
             android:gravity="center">
-            <TextView
+            <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="@string/tvFavorites"
-                android:id="@+id/tvFavorites"
-                android:layout_centerHorizontal="true" />
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:text="@string/tvFavorites"
+                    android:id="@+id/tvFavorites"
+                    android:layout_centerHorizontal="true" />
+                <ImageView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:id="@+id/ivTweetDetailFavorites"
+                    android:src="@drawable/ic_fav"
+                    android:paddingLeft="10dp"
+                    android:layout_toRightOf="@id/tvFavorites"  />
+            </RelativeLayout>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
