Allow Fav/UnFav from TweetDetail View. Display Media in Detail View

--- a/app/src/main/res/layout/activity_tweet_detail.xml
+++ b/app/src/main/res/layout/activity_tweet_detail.xml
@@ -52,6 +52,16 @@
             android:layout_below="@+id/tvTweetDetailScreenName"
             android:layout_toRightOf="@+id/ivTweetDetailProfileImage"/>
 
+        <ImageView
+            android:paddingTop="5dp"
+            android:layout_centerHorizontal="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/ivTweetDetailMedia"
+            android:maxWidth="600dp"
+            android:scaleType="centerInside"
+            android:adjustViewBounds="true"
+            android:layout_below="@id/tvTweetDetailBody"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
